--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="./src/assets/expense.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./assets/expense.png" type="image/x-icon" />
     <title>Expense Tracker</title>
   </head>
   <body>
